# Sim2DLD

./: README.md
.github/workflows/: rust.yml
godot/: export_presets.cfg  godot_first.gdextension  icon.svg.import  lidar.gdextension  lidar.tscn  node_2d.tscn  project.godot  sprite_2d.tscn
godot/.godot/: extension_list.cfg
rust/: Cargo.toml
rust/src/: lib.rs  lidar.rs  player.rs
rust/src/lidar/: argument_parser.rs  lidar_state.rs  random_geometry.rs  serializer.rs
