[package]
name = "godot_first"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rand = "0.8"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.127"
ndarray = "0.16.1"
